<resources>
    <string name="capA">A. Indentificación de la vivienda</string>
    <string name="capB">B. Características de la vivienda</string>
    <string name="capHogarA">A. Características del hogar </string>
    <string name="capMHogarA">A. Indentificación miembro del hogar</string>
    <string name="capMHogarB">B. Salud</string>
    <string name="capMHogarC">C. Educación</string>
    <string name="capMHogarD">D. Fuerza de trabajo</string>
    <string name="capMHogarE">E. Ocupados</string>
    <string name="capMHogarE2">E. Ocupados -Asalariados</string>
    <string name="capMHogarE3">E. Ocupados – Independientes</string>
    <string name="capMHogarE4">E. Ocupados: Asalariados e Independientes</string>
    <string name="capMHogarE5">E. Ocupados-Trabajo secundario</string>
    <string name="capMHogarE6">E. Ocupados-Empleo con insuficiencia de horas</string>
    <string name="capMHogarE7">E. Ocupados: Calidad del empleo principal</string>
    <string name="capMHogarF">F. Desocupados</string>
    <string name="capMHogarG">G. Inactivos</string>
    <string name="capMHogarH">H. Otros ingresos del mes pasado</string>
    <string name="capMHogarI">I. TICs</string>
    <string name="asalariados_independienes_1">29. ¿Cuántos meses trabajó en los últimos doce meses?</string>
    <string name="asalariados_independientes_2">30. ¿Cuántos horas a la semana trabaja normalmente Ud. en este trabajo?</string>
    <string-array name="asalariados_independientes_3">
        <item>Es lo único que ha conseguido pero quiere trabajar más horas</item>
        <item>Es la jornada que se ajusta a sus necesidades</item>
        <item>Otro</item>
    </string-array>
    <string name="asalariados_independientes_4">32. ¿Cuántos horas trabajó Ud. la semana pasada en este trabajo?</string>
    <string name="asalariados_independientes_33">33. ¿Por qué razón, de las horas que normalmente trabaja, hubo algunas que no trabajó la semana pasada?</string>
    <string-array name="asalariados_independientes_6">
        <item>De ___ a ___</item>
        <item>Por turnos rotatorios</item>
    </string-array>
    <string-array name="asalariados_independientes_7">
        <item>Trabaja solo</item>
        <item>2 a 3 personas</item>
        <item>4 a 5 personas</item>
        <item>6 a 10 personas</item>
        <item>11 a 19 personas</item>
        <item>20 a 30 personas</item>
        <item>31 a 50 personas</item>
        <item>51 a 100 personas</item>
        <item>100 y más personas</item>
    </string-array>
    <string-array name="asalariados_independientes_8">
        <item>En esta vivienda</item>
        <item>En otras viviendas</item>
        <item>En un kiosco o caseta</item>
        <item>En un vehículo</item>
        <item>De puerta en puerta</item>
        <item>En la calle</item>
        <item>Local. oficina. fábrica. etc</item>
        <item>En el campo. mar o rio</item>
        <item>En una obra en construcción</item>
        <item>En una mina o cantera</item>
        <item>Otro</item>
    </string-array>
    <string-array name="asalariados_independientes_9">
        <item>Es cotizante en régimen contributivo</item>
        <item>Tiene régimen subsidiado</item>
        <item>Es beneficiario de un afiliado</item>
        <item>Con ahorros personales</item>
        <item>Con ayuda de algún familiar</item>
        <item>Con otro tipo de seguro</item>
        <item>Pidiendo dinero prestado</item>
        <item>Vendería su vivienda o bienes del hogar</item>
        <item>No lo ha considerado</item>
        <item>No tendría como cubrirlos</item>
        <item>Otro</item>
    </string-array>
    <string-array name="asalariados_independientes_10">
        <item>Si</item>
        <item>No</item>
        <item>Ya es pensionado</item>
    </string-array>
    <string name="asalariados_independientes_11">39. En cuál de los siguientes fondos cotiza actualmente:</string>
    <string-array name="asalariados_independientes_12">
        <item>Ud. paga una parte y otra la empresa o patrón</item>
        <item>Colpensiones. FNA</item>
        <item>Fondo subsidiado</item>
        <item>Regímenes especiales (FFMM. Ecopetrol)</item>
    </string-array>
    <string name="asalariados_independientes_13">41. ¿Cuántos años lleva Ud. cotizando en el fondo de pensiones?</string>
    <string name="asalariados_independientes_14">42. ¿Qué está haciendo Ud. actualmente para sostenerse económicamente en la vejez? </string>
    <string name="asalariados_independientes_15">43. ¿Se encuentra afiliado actualmente por una empresa o individualmente a una aseguradora de riesgos laborales?</string>
    <string name="asalariados_independientes_16">44. ¿Se encuentra afiliado actualmente a una caja de compensación familiar?</string>
    <string name="app_name">Encuesta</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Configuración</string>
    <string name="btn_siguente">Siguiente</string>
    <string name="incomplete">Recuerde completar todas las preguntas formuladas</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_family">FamilyActivity</string>
    <string name="title_activity_ocupado">Ocupado</string>
    <string name="ok">Aceptar</string>
    <string name="cancel">Cancelar</string>
    <string name="continuar">Continuar</string>
    <string name="touch_me">Toque para seleccionar la respuesta</string>
    <string name="observaciones">OBSERVACIONES</string>
    <string name="dpt_value">Cordoba</string>
    <string name="municipio_value">San Bernardo Del Viento</string>
    <string name="dpt">Departamento:</string>
    <string name="municipio">Municipio:</string>
    <string name="zona">Zona</string>
    <string name="barrio_corregimiento">Barrio o Corregimiento</string>
    <string name="sector_vereda">Sector o Vereda</string>
    <string name="direccion">Dirección (calle, manzana, lote, apartamento, finca, etc)</string>
    <string name="num_hogares">Números de hogares en la vivienda</string>
    <string name="num_persona_hogar">¿Cuántas personas conforman este hogar?</string>
    <string name="edades_mienbros_hogar">Edades de cada uno de los miembros del hogar</string>
    <string name="telefono">Teléfono</string>
    <string name="leer_escribir">¿Ud sabe leer y escribir?</string>
    <string name="estudia">¿Actualmente ud asiste a preescolar, colegio, escuela, universidad?</string>
    <string name="establecimiento_educativo">¿El establecimiento al que asiste es oficial?</string>
    <string name="nivel_educativo">¿Cuál es el nivel educativo mas alto alcanzado por ud?</string>
    <string name="mayor_titulo_obtenido">¿Cual es el titulo o diploma de mayor nivel educativo que ud ha recibido?</string>
    <string name="afiliacion">¿Ud está afiliado, es cotizante o es beneficiario de alguna entidad de seguridad social en salud?</string>
    <string name="regimen_afiliado">¿A cual de los siguientes regimenes de seguridad social en salud está afiliado?</string>
    <string name="recibio_atencion_hospital_sanjose">¿Ud alguna vez ha recibido alguna atención en el hospital San Jose?</string>
    <string name="atencion_hospital_sanjose">¿Que tal le parace la atención en el hospital?</string>
    <string name="actividad_primera_semana_junio">1. ¿En que actividad ocupo ud la mayor parte de la última semana de Junio?</string>
    <string name="sexo">Sexo</string>
    <string name="nacimiento">¿Cuál es la fecha de nacimiento?</string>
    <string name="cuantos_años_tiene">¿ Cuantos años cumplidos tiene ?</string>
    <string name="lugar_nacimiento">¿ Cual es su lugar de nacimiento?</string>
    <string name="parentesco">¿Cuál es el parentesco con el jefe o jefa del hogar ?</string>
    <string name="estado_civil">Estado civil</string>
    <string name="generalesMensaje">Solamente para personas de 10 años y mas</string>
    <string name="tics_1">1. ¿Usó ud el computador (en cualquier lugar) en los últimos 12 meses?</string>
    <string name="tics_2">2. ¿Usó ud el internet (en cualquier lugar) en los últimos 12 meses?</string>
    <string name="tics_3">3. Durante los últimos 12 meses, ¿En cuales de los siguientes sitios usó internet?</string>
    <string name="tics_4">4. ¿Para cual de los siguientes servicios o actividades utilizó internet en los últimos 12 meses?</string>
    <string-array name="tics_5">
        <item>Al menos una vez al día</item>
        <item>Al menos una vez a la semana. pero no cada día</item>
        <item>Al menos una vez al mes. pero no cada semana</item>
        <item>Menos de una vez al mes</item>

    </string-array>
    <string name="tics_3a">3a. En centros de acceso público gratis</string>
    <string name="tics_3b">3b. En la casa de otra persona</string>
    <string name="tics_3c">3c. En la institución educativa</string>
    <string name="tics_3d">3d. En el trabajo</string>
    <string name="tics_3e">3e. En el hogar</string>
    <string name="tics_3f">3f. En centros de acceso público con costo (café internet)</string>
    <string name="tics_3g">3g. Otro, ¿Cual?</string>
    <string name="tics_4a">4a. Obtener información (excluir educación y aprendizaje)</string>
    <string name="tics_4b">4b. Comprar/ordenar productos y servicios</string>
    <string name="tics_4c">4c. Eduación y aprendizaje</string>
    <string name="tics_4d">4d. Comunicación</string>
    <string name="tics_4e">4e. Actividades de entretenimiento(juegos, bajar música, etc)</string>
    <string name="tics_4f">4f. Banca electronica y otras transacciones financieras</string>
    <string name="tics_4g">4g. Otro, ¿Cual?</string>
    <string name="otros_ingresos1">1. El mes pasado, ¿Usted recibió pagos por concepto de arriendo y/o pensiones?</string>
    <string name="otros_ingresos2">2. El mes pasado, recibio pagos por:</string>
    <string name="otros_ingresos2a">2a. Arriendos de casas, apartamentos fincas, lotes, vehiculos, equipos, etc.</string>
    <string name="otros_ingresos2b">2b. Pensiones o jubilaciones por vejez, invalidez o sustitucion pensional</string>
    <string name="otros_ingresos2c">2c. Pension alimenticia por paternidad, divorcio o separación</string>
    <string-array name="empleo_57">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>
    <string name="empleo_57a">Con su trabajo actual</string>
    <string name="empleo_57b">Con el numero de horas trabajadas a la semana</string>
    <string name="empleo_57c">Con la aplicación de su conocimiento en su trabajo</string>
    <string name="empleo_57d">Con el pago o ganancia que recibe de su empleo o negocio</string>
    <string name="empleo_57e">Con los beneficios y prestaciones que recibe</string>
    <string name="empleo_57f">Con su jornada laboral actual</string>
    <string name="empleo_58">¿Esta usted afiliado o hace parte de una asociación gremial o sindical?</string>
    <string-array name="empleo_59">
        <item>Muy inestable</item>
        <item>Inestable</item>
        <item>Estable</item>
        <item>Muy estable</item>
    </string-array>
    <string-array name="empleo_60">
        <item>Muy incompatibles</item>
        <item>Incompatibles</item>
        <item>Compatibles</item>
        <item>My compatibles</item>
    </string-array>
    <string-array name="empleo_61">
        <item>De cesantias</item>
        <item>Ahorros personales</item>
        <item>Indemnización o similar</item>
        <item>Pidiendo dinero prestado</item>
        <item>Ayuda de algún familiar</item>
        <item>No tendría como cubrirlos</item>
        <item>No lo ha considerado</item>
        <item>Venderia su vivienda o bienes del hogar</item>
        <item>Empeñaria bienes del hogar</item>
        <item>Otro. cual?</item>
    </string-array>
</resources>